# bigquery-mcp

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_RECOMMENDATIONS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FIXES_COMPLETED.md  LICENSE  README-Docker.md  README.md  RELEASE_NOTES_v1.1.0.md  SETUP-GUIDE.md  TASKS_v0.4.2.md  V0.4.3_RELEASE_NOTES.md  VALIDATION_CONTEXT.md  docker-compose.dev.yml  docker-compose.dev.yml.example  docker-compose.test.yml  docker-compose.yml  docker-compose.yml.example  mkdocs.yml  pyproject.toml  requirements.txt  setup-dev.sh  test-v1.1.0.sh  test_banned_keywords.py  test_execution_check.py  test_fix.py  test_union_validation.py
.cursor/rules/: default.mdc
.github/workflows/: ci.yml  docs.yml  release.yml
config/: config.dev.yaml  config.yaml.example
docs/: ai-setup.md  architecture.md  claude-desktop-setup.md  configuration.md  cursor-mcp-setup.md  development-environment.md  development.md  index.md  installation.md  setup.md  tools.md
scripts/: lint.sh
site/: 404.html  index.html  sitemap.xml
site/architecture/: index.html
site/configuration/: index.html
site/cursor-mcp-setup/: index.html
site/development/: index.html
site/installation/: index.html
site/tools/: index.html
src/: __init__.py  client.py  config.py  server.py
src/tools/: __init__.py  analysis.py  context.py  development.py  discovery.py  execution.py
src/utils/: __init__.py  errors.py  formatting.py  validation.py
tests/: conftest.py  test_server_local.py  test_server_startup.py  test_v3_server.py  test_v4_server.py
tests/fixtures/: sample_config.yaml  test_config.yaml
tests/integration/: test_bigquery_integration.py  test_server_local.py  test_server_startup.py
tests/unit/: test_analysis.py  test_discovery.py  test_execution.py  test_validation.py
