[tool.poetry]
name = "bigquery-mcp"
version = "1.0.0"
description = "A Model Context Protocol server for BigQuery with cross-project support"
authors = ["BigQuery MCP Contributors"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/yourusername/bigquery-mcp"
repository = "https://github.com/yourusername/bigquery-mcp"
keywords = ["bigquery", "mcp", "model-context-protocol", "ai", "llm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring BigQuery",
]

# Legacy black and flake8 configurations removed - using ruff instead

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".github/workflows/*.yml", ".github/workflows/*.yaml"]

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), and import sorting (`I`)
select = ["E", "F", "I"]

# Ignore some specific rules
ignore = [
    "E501",  # Line too long (handled by line-length)
    "E203",  # Whitespace before ':'
    "E731",  # Do not assign a lambda expression, use a def (allow in tests)
]

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".mypy_cache",
    ".pytest_cache",
    "htmlcov",
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Skip magic trailing comma (keep trailing commas)
skip-magic-trailing-comma = false

# Use 4-space indentation (default)
indent-style = "space"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
