[project]
name = "bigquery-mcp"
version = "1.1.0"
description = "A Model Context Protocol server for BigQuery with cross-project support"
authors = [{name = "BigQuery MCP Contributors"}]
readme = "README.md"
license = {text = "MIT"}
keywords = ["bigquery", "mcp", "model-context-protocol", "ai", "llm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.1.0",
    "google-cloud-bigquery>=3.0.0",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/aicayzer/bigquery-mcp"
Repository = "https://github.com/aicayzer/bigquery-mcp"
Issues = "https://github.com/aicayzer/bigquery-mcp/issues"
Documentation = "https://aicayzer.github.io/bigquery-mcp/"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring BigQuery",
]

# Legacy black and flake8 configurations removed - using ruff instead

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".github/workflows/*.yml", ".github/workflows/*.yaml"]

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), and import sorting (`I`)
select = ["E", "F", "I"]

# Ignore some specific rules
ignore = [
    "E501",  # Line too long (handled by line-length)
    "E203",  # Whitespace before ':'
    "E731",  # Do not assign a lambda expression, use a def (allow in tests)
]

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".mypy_cache",
    ".pytest_cache",
    "htmlcov",
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Skip magic trailing comma (keep trailing commas)
skip-magic-trailing-comma = false

# Use 4-space indentation (default)
indent-style = "space"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
